# imageHashTesting

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  app  averageHashTest  cmake_install.cmake  commandsToRun.sh  dumpKeypoints.sh  imageHashTesting  imageHashTesting.cbp  test1
c_src/: makefile
c_src/src/: .main.cc.swp  Keypoint.h  Triangle.h  main.cc  mainImageProcessingFunctions.cpp  mainImageProcessingFunctions.hpp  main_old.cc
c_src/src/img_hash/: AverageHash.h  BlockMeanHash.h  FragmentHash.h  PerceptualHash.h  (+1 more)
c_src/test/: averageHashTest.cpp  blockMeanHashTest.cpp  fullKeypointAccuracyTest.cpp  hashTests.cpp  perceptualHashTest.cpp  testReadingMatchingTrianglesFromJsonFile.cpp  utilsTest.cpp
cmake/modules/: hiredis-config.cmake
googletest/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
imageMatchingPairs/2f95f3e1294c759ec23c8e6a21bb2cca/: matchingTriangles.json
imageMatchingPairs/Moderat-Bad-Kingdom/: matchingTriangles.json
imageMatchingPairs/Moderat-Bad-Kingdom6_2/: matchingTriangles.json
imageMatchingPairs/Moderat-Bad-Kingdom_1/: matchingTriangles.json
imageMatchingPairs/_vector__natsu_and_happy___ninjas__by_coolez-d89c2au/: matchingTriangles.json
imageMatchingPairs/img1/: matchingTriangles.json
imageMatchingPairs/lennaWithGreenDots/: matchingTriangles.json
imageMatchingPairs/moderat-bad-kingdom/: matchingTriangles.json
imageMatchingPairs/mountains_orginal_dots/: matchingTriangles.json
imageMatchingPairs/upload02/: matchingTriangles.json
inputImages/: imageNames.txt
inputImages/2f95f3e1294c759ec23c8e6a21bb2cca/: hashes.txt  keypoints.json  keypoints.txt  keypoints2.txt
inputImages/Moderat-Bad-Kingdom/: hashes.txt  keypoints.json  keypoints.txt  keypoints2.txt
inputImages/Moderat-Bad-Kingdom-10/: hashes.txt  keypoints.txt  keypoints2.json
inputImages/Moderat-Bad-Kingdom6_2/: hashes.txt  keypoints.json  keypoints.txt  keypoints2.txt
inputImages/Moderat-Bad-Kingdom_1/: hashes.txt  keypoints.json  keypoints.txt  keypoints2.json
inputImages/_vector__natsu_and_happy___ninjas__by_coolez-d89c2au/: hashes.txt  keypoints.json  keypoints.txt  keypoints2.txt
inputImages/costanza_changed/: excludeList.txt  keypoints.json  keypoints2.json
inputImages/dots/: excludeList.txt  keypoints.json  keypoints2.json
inputImages/img1/: excludeList.txt  hashes.txt  keypoints.json  keypoints.txt  keypoints2.txt
inputImages/img2/: excludeList.txt  hashes.txt  keypoints.json  keypoints.txt  keypoints2.json
inputImages/lennaWithGreenDots/: hashes.txt  keypoints.json  keypoints.txt  keypoints2.json  keypoints2.txt
inputImages/lennaWithGreenDotsInTriangle/: keypoints.json  keypoints2.json
inputImages/lennaWithGreenDotsInTriangle1/: keypoints.json  keypoints2.json
inputImages/lennaWithGreenDotsInTriangle2/: keypoints.json  keypoints2.json
inputImages/lennaWithGreenDotsInTriangle3/: keypoints.json  keypoints2.json
inputImages/moderat-bad-kingdom/: hashes.txt  keypoints.json  keypoints.txt  keypoints2.json
inputImages/mountains_orginal_dots/: hashes.txt  keypoints.json  keypoints.txt  keypoints2.txt
inputImages/rick1/: excludeList.txt  hashes.txt  keypoints.json  keypoints.txt  keypoints2.txt
inputImages/rick2/: excludeList.txt  keypoints.json  keypoints2.json
inputImages/rick3/: keypoints.json  keypoints2.json
inputImages/rick_crop_1/: keypoints.json  keypoints2.json
inputImages/rick_crop_2/: keypoints.json  keypoints2.json
inputImages/rick_crop_3/: keypoints.json  keypoints2.json
inputImages/rick_crop_4/: keypoints.json  keypoints2.json
inputImages/rick_crop_5/: keypoints.json  keypoints2.json
inputImages/rick_full_1/: excludeList.txt  keypoints.json  keypoints2.json
inputImages/rick_full_2/: keypoints.json  keypoints2.json
inputImages/small_lenna1/: keypoints.json  keypoints2.json
inputImages/small_lenna2/: keypoints.json  keypoints2.json
inputImages/small_lenna3/: keypoints.json  keypoints2.json
inputImages/small_lenna4/: keypoints.json  keypoints2.json
inputImages/testImage1/: keypoints.json  keypoints2.json
inputImages/testImage2/: keypoints.json  keypoints2.json
inputImages/upload02/: hashes.txt  keypoints.json  keypoints.txt  keypoints2.txt
python_src/: Keypoint.py  ShapeAndPositionInvariantImage.py  TwoImagesWithMatchedTriangles.py  dumpAllImages.py  dumpImage.sh  dumpKeypointsToJson.py  dumpMatchingTriangles.py  edgeFinder.py  getKeypoints.py  getKeypointsFromEdges.py  keypointTesting.py  keypoints.py  main.py  mainTestingFunctions.py  new_shapes.py  plotting.py  run_me.sh  test_testTheResizeAndHashing.py  tri1.txt  tri2.txt
python_src/KeypointSystem/: getKeypoints.py  keypoints.py  new_shapes.py
python_src/old/: Fragment.py  ImageLoaded.py  TransformationObjects.py  TwoImageKeypointSupplier.py  TwoImagesWithMatchedTriangles.py  dumpAllImages.py  fragProcessing.py  hashProvider.py  main.py  mainImageProcessingFunctions.py  run_me.sh  shapeDrawerWithDebug.py  test_TwoImageKeypointSupplier.py  test_keypointSystem.py  test_normaliseScaleForSingleFrag.py  test_testTheResizeAndHashing.py  test_testTheResizingAndScalingFunctions.py
src/: ImageLoaded.py  TwoImageKeypointSupplier.py  dumpImage.py  dumpImage.sh  jsonHandling.py  main.py  mainImageProcessingFunctions.py  test_normaliseScaleForSingleFrag.py  test_testKeypointCulling.py  test_testTheResizingAndScalingFunctions.py
src/KeypointSystem/: getKeypoints.py  keypointTest.py  plotting.py
src_c/: FragmentHash.h  app  app2  app3  callgrind.out.21489  dumpImage.sh  imageHashTest.py  main.cc  mainImageProcessingFunctions.cpp  output.txt  output_c.txt  prettyprint.sh  run_me.sh  testResultsOfTestingTheSameTrianglesWithTheCCode.txt  zCompRun.sh
src_c/hiredis/: hiredis-test
src_c/img_hash/: block_mean_hash.hpp  img_hash.hpp  marr_hildreth_hash.hpp  phash.cpp  phash.hpp
(+22 files in other folders)
